Fixes last spacing issue at bottom of file

--- a/index.css
+++ b/index.css
@@ -139,10 +139,6 @@ footer .row {
   position: relative;
 }
 
-.store {
-  margin-bottom: 6em;
-}
-
 #tabs-1 .product-box {
   background-image: url(beef-flanksteak.jpg);
 }
