--- a/skeleton.css
+++ b/skeleton.css
@@ -113,6 +113,7 @@
 .store {
     width: 960px;
     padding: 0;
+    margin-bottom: 6em;
 }
 
 .store-row {
@@ -296,6 +297,7 @@
         .store {
             width: 300px;
             padding-top: 0em;
+            margin-bottom: 0em;
         }
 
         .store-row {
